--- a/_data/data.yml
+++ b/_data/data.yml
@@ -114,7 +114,7 @@ sidebar:
      
       
 
-working-experiences:
+career-profile:
     - role: Backend Developer
       time: 2021 - 2022
       company: Tencent, ShenZhen
