--- a/_data/data.yml
+++ b/_data/data.yml
@@ -188,11 +188,11 @@ publications:
         conference: AAAI26 Under Review, 2025
         
       - title: "Towards Analyzing and Understanding the Limitations of VAPO: A Theoretical Perspective"
-        authors: Jintian Shao*, Yiming Cheng
+        authors: Jintian Shao*, Yiming Cheng*
         conference: arxiv preprint
         
       - title: "Power-Law Decay Loss for Large Language Model Finetuning: A Theory Perspective"
-        authors: Jintian Shao*, Yiming Cheng
+        authors: Jintian Shao*, Yiming Cheng*
         conference: arxiv preprint
 
       # - title: "Improving Spatiotemporal Self-Supervision by Deep Reinforcement Learning"
