--- a/_data/data.yml
+++ b/_data/data.yml
@@ -239,7 +239,10 @@ skills:
         level: 75%
 
 awards:
-    title: Awards &amp; Honors
+    - title: Awards &amp; Honors
+
+talks:
+    - tilte: placeholder
 
 # footer: >
 #     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
